--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
 
-    <script src="http://apis.google.com/js/platform.js" async defer></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 
-    <a href="#" onclick="signOut();"> Sign out </a>
+    <a href="#" onclick="signOut();">Sign out</a>
 
     <script>
         function onSignIn(googleUser) {
@@ -40,4 +40,4 @@
     </script>
     
 </body>
-n</html>
+</html>
